config/lang/y.output

state 0
	$accept: .top $end 

	STRING  shift 6
	PROGRAM_BRACKET_LEFT  shift 7
	.  error

	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 2
	literalModeValue  goto 3
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  literalModeTop.    (1)
	literalModeTop:  literalModeTop.literalModeValue 

	STRING  shift 6
	PROGRAM_BRACKET_LEFT  shift 7
	.  reduce 1 (src line 29)

	interpolation  goto 5
	literal  goto 4
	literalModeValue  goto 8

state 3
	literalModeTop:  literalModeValue.    (2)

	.  reduce 2 (src line 35)


state 4
	literalModeValue:  literal.    (4)

	.  reduce 4 (src line 54)


state 5
	literalModeValue:  interpolation.    (5)

	.  reduce 5 (src line 59)


state 6
	literal:  STRING.    (13)

	.  reduce 13 (src line 97)


state 7
	interpolation:  PROGRAM_BRACKET_LEFT.expr PROGRAM_BRACKET_RIGHT 

	STRING  shift 6
	IDENTIFIER  shift 11
	PROGRAM_BRACKET_LEFT  shift 7
	.  error

	expr  goto 9
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 10
	literalModeValue  goto 3

state 8
	literalModeTop:  literalModeTop literalModeValue.    (3)

	.  reduce 3 (src line 40)


state 9
	interpolation:  PROGRAM_BRACKET_LEFT expr.PROGRAM_BRACKET_RIGHT 

	PROGRAM_BRACKET_RIGHT  shift 12
	.  error


state 10
	literalModeTop:  literalModeTop.literalModeValue 
	expr:  literalModeTop.    (7)

	STRING  shift 6
	PROGRAM_BRACKET_LEFT  shift 7
	.  reduce 7 (src line 70)

	interpolation  goto 5
	literal  goto 4
	literalModeValue  goto 8

state 11
	expr:  IDENTIFIER.    (8)
	expr:  IDENTIFIER.PAREN_LEFT args PAREN_RIGHT 

	PAREN_LEFT  shift 13
	.  reduce 8 (src line 75)


state 12
	interpolation:  PROGRAM_BRACKET_LEFT expr PROGRAM_BRACKET_RIGHT.    (6)

	.  reduce 6 (src line 64)


state 13
	expr:  IDENTIFIER PAREN_LEFT.args PAREN_RIGHT 
	args: .    (10)

	STRING  shift 6
	IDENTIFIER  shift 11
	PROGRAM_BRACKET_LEFT  shift 7
	.  reduce 10 (src line 84)

	expr  goto 15
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 10
	literalModeValue  goto 3
	args  goto 14

state 14
	expr:  IDENTIFIER PAREN_LEFT args.PAREN_RIGHT 
	args:  args.COMMA expr 

	PAREN_RIGHT  shift 16
	COMMA  shift 17
	.  error


state 15
	args:  expr.    (12)

	.  reduce 12 (src line 92)


state 16
	expr:  IDENTIFIER PAREN_LEFT args PAREN_RIGHT.    (9)

	.  reduce 9 (src line 79)


state 17
	args:  args COMMA.expr 

	STRING  shift 6
	IDENTIFIER  shift 11
	PROGRAM_BRACKET_LEFT  shift 7
	.  error

	expr  goto 18
	interpolation  goto 5
	literal  goto 4
	literalModeTop  goto 10
	literalModeValue  goto 3

state 18
	args:  args COMMA expr.    (11)

	.  reduce 11 (src line 88)


12 terminals, 8 nonterminals
14 grammar rules, 19/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 25/30000
14 extra closures
19 shift entries, 1 exceptions
12 goto entries
15 entries saved by goto default
Optimizer space used: output 21/30000
21 table entries, 0 zero
maximum spread: 12, maximum offset: 17
